couchbase-lite/3.4/c/query-live.md
---
title: Live Queries
description: Couchbase mobile database live query concepts
pubDate: 2026-08-17T09:53:44.266Z
antora:
  editUrl: https://github.com/couchbase/docs-couchbase-lite/edit/release/3.4/modules/c/pages/query-live.adoc
  xref: xref:3.4@couchbase-lite:c:query-live.adoc[]
---

[Consult the llms.txt file for a full list of contents](/llms.txt)
[View original HTML](/couchbase-lite/3.4/c/query-live.html)

# Live Queries

> Description — _Couchbase mobile database live query concepts_  

## [](#overview)Overview

## [](#activating-a-live-query)Activating a Live Query

A live query is a query that, once activated, remains active and monitors the database for changes; refreshing the result set whenever a change occurs. As such, it is a great way to build reactive user interfaces — especially table/list views — that keep themselves up to date.

**So, a simple use case may be:** A replicator running and pulling new data from a server, whilst a live-query-driven UI automatically updates to show the data without the user having to manually refresh. This helps your app feel quick and responsive.

To activate a LiveQuery just add a change listener to the query statement. It will be immediately active. When a change is detected the query automatically runs, and posts the new query result to any observers (change listeners).

Example 1\. Starting a Live Query

* C
* C++

```c
/*
static void query_change_listener(void* context, CBLQuery* query, CBLListenerToken* token) {
    CBLError err = {};
    CBLResultSet* results = CBLQuery_CopyCurrentResults(query, token, &err);
    while(CBLResultSet_Next(results)) {
        // Update UI
    }
}
*/

// NOTE: No error handling, for brevity (see getting started)

CBLError err = {};
CBLQuery* query = CBLDatabase_CreateQuery(database, kCBLN1QLLanguage,
    FLSTR("SELECT * FROM _"), NULL, &err); (1)

CBLListenerToken* token = CBLQuery_AddChangeListener(query, query_change_listener, NULL); (2)
```

```cpp
// NOTE: No error handling, for brevity (see getting started)
cbl::Query query(database, kCBLN1QLLanguage, "SELECT * FROM _"); (1)

// The listener is invoked with the current results whenever they change
auto token = query.addChangeListener([](cbl::Query::Change change) { (2)
    for (cbl::Result result : change.results()) {
        // Update UI
    }
});
```

| **1** | Build the query statements                                                                                                                        |
| ----- | ------------------------------------------------------------------------------------------------------------------------------------------------- |
| **2** | Activate the _live_ query by attaching a listener. Save the token to detach the listener and stop the query later — see [Example 2](#ex-qry-stop) |

Example 2\. Stop a Live Query

* C
* C++

```c
CBLListener_Remove(token); // The token received from AddChangeListener
CBLQuery_Release(query);
```

```cpp
token.remove(); // The token received from addChangeListener
```

| **1** | Here we use the change lister token from [Example 1](#ex-qry-start) to remove the listener. Doing so stops the live query. |
| ----- | -------------------------------------------------------------------------------------------------------------------------- |